@@ -365,6 +365,22 @@ name|util
 operator|.
 name|url
 operator|.
+name|URLHandler
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|util
+operator|.
+name|url
+operator|.
 name|URLHandlerRegistry
 import|;
 end_import
@@ -2359,6 +2375,96 @@ argument_list|(
 literal|"circularDependencyStrategy"
 argument_list|)
 expr_stmt|;
+name|String
+name|requestMethod
+init|=
+operator|(
+name|String
+operator|)
+name|attributes
+operator|.
+name|get
+argument_list|(
+literal|"httpRequestMethod"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+literal|"head"
+operator|.
+name|equalsIgnoreCase
+argument_list|(
+name|requestMethod
+argument_list|)
+condition|)
+block|{
+name|URLHandlerRegistry
+operator|.
+name|getHttp
+argument_list|()
+operator|.
+name|setRequestMethod
+argument_list|(
+name|URLHandler
+operator|.
+name|REQUEST_METHOD_HEAD
+argument_list|)
+expr_stmt|;
+block|}
+if|else if
+condition|(
+literal|"get"
+operator|.
+name|equalsIgnoreCase
+argument_list|(
+name|requestMethod
+argument_list|)
+condition|)
+block|{
+name|URLHandlerRegistry
+operator|.
+name|getHttp
+argument_list|()
+operator|.
+name|setRequestMethod
+argument_list|(
+name|URLHandler
+operator|.
+name|REQUEST_METHOD_GET
+argument_list|)
+expr_stmt|;
+block|}
+if|else if
+condition|(
+operator|(
+name|requestMethod
+operator|!=
+literal|null
+operator|)
+operator|&&
+operator|(
+name|requestMethod
+operator|.
+name|trim
+argument_list|()
+operator|.
+name|length
+argument_list|()
+operator|>
+literal|0
+operator|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Invalid httpRequestMethod specified, must be "
+operator|+
+literal|"one of {'HEAD', 'GET'}"
+argument_list|)
+throw|;
+block|}
 block|}
 specifier|private
 name|void
@@ -3625,7 +3731,12 @@ name|ivy
 operator|.
 name|getConflictManager
 argument_list|(
+name|ivy
+operator|.
+name|substitute
+argument_list|(
 name|defaultCM
+argument_list|)
 argument_list|)
 decl_stmt|;
 if|if
