@@ -55,6 +55,14 @@ name|AbstractURLHandler
 implements|implements
 name|URLHandler
 block|{
+comment|// the request method to use. TODO: don't use a static here
+specifier|private
+specifier|static
+name|int
+name|requestMethod
+init|=
+name|REQUEST_METHOD_HEAD
+decl_stmt|;
 specifier|public
 name|boolean
 name|isReachable
@@ -284,6 +292,30 @@ operator|)
 argument_list|)
 throw|;
 block|}
+block|}
+specifier|public
+name|void
+name|setRequestMethod
+parameter_list|(
+name|int
+name|requestMethod
+parameter_list|)
+block|{
+name|AbstractURLHandler
+operator|.
+name|requestMethod
+operator|=
+name|requestMethod
+expr_stmt|;
+block|}
+specifier|public
+name|int
+name|getRequestMethod
+parameter_list|()
+block|{
+return|return
+name|requestMethod
+return|;
 block|}
 block|}
 end_class
