@@ -553,6 +553,8 @@ init|=
 name|doGet
 argument_list|(
 name|url
+argument_list|,
+literal|0
 argument_list|)
 decl_stmt|;
 if|if
@@ -610,6 +612,8 @@ init|=
 name|doGet
 argument_list|(
 name|src
+argument_list|,
+literal|0
 argument_list|)
 decl_stmt|;
 comment|// We can only figure the content we got is want we want if the status is success.
@@ -819,14 +823,24 @@ name|int
 name|timeout
 parameter_list|)
 block|{
-name|HeadMethod
-name|head
+name|HttpMethodBase
+name|method
 init|=
 literal|null
 decl_stmt|;
 try|try
 block|{
-name|head
+if|if
+condition|(
+name|getRequestMethod
+argument_list|()
+operator|==
+name|URLHandler
+operator|.
+name|REQUEST_METHOD_HEAD
+condition|)
+block|{
+name|method
 operator|=
 name|doHead
 argument_list|(
@@ -835,13 +849,26 @@ argument_list|,
 name|timeout
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|method
+operator|=
+name|doGet
+argument_list|(
+name|url
+argument_list|,
+name|timeout
+argument_list|)
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|checkStatusCode
 argument_list|(
 name|url
 argument_list|,
-name|head
+name|method
 argument_list|)
 condition|)
 block|{
@@ -853,12 +880,12 @@ literal|true
 argument_list|,
 name|getResponseContentLength
 argument_list|(
-name|head
+name|method
 argument_list|)
 argument_list|,
 name|getLastModified
 argument_list|(
-name|head
+name|method
 argument_list|)
 argument_list|)
 return|;
@@ -969,12 +996,12 @@ finally|finally
 block|{
 if|if
 condition|(
-name|head
+name|method
 operator|!=
 literal|null
 condition|)
 block|{
-name|head
+name|method
 operator|.
 name|releaseConnection
 argument_list|()
@@ -1193,7 +1220,7 @@ specifier|private
 name|long
 name|getResponseContentLength
 parameter_list|(
-name|HeadMethod
+name|HttpMethodBase
 name|head
 parameter_list|)
 block|{
@@ -1343,6 +1370,9 @@ name|doGet
 parameter_list|(
 name|URL
 name|url
+parameter_list|,
+name|int
+name|timeout
 parameter_list|)
 throws|throws
 name|IOException
@@ -1355,6 +1385,13 @@ argument_list|(
 name|url
 argument_list|)
 decl_stmt|;
+name|client
+operator|.
+name|setTimeout
+argument_list|(
+name|timeout
+argument_list|)
+expr_stmt|;
 name|GetMethod
 name|get
 init|=
@@ -2034,12 +2071,12 @@ specifier|public
 name|long
 name|getResponseContentLength
 parameter_list|(
-name|HeadMethod
-name|head
+name|HttpMethodBase
+name|method
 parameter_list|)
 block|{
 return|return
-name|head
+name|method
 operator|.
 name|getResponseContentLength
 argument_list|()
@@ -2081,14 +2118,14 @@ specifier|public
 name|long
 name|getResponseContentLength
 parameter_list|(
-name|HeadMethod
-name|head
+name|HttpMethodBase
+name|method
 parameter_list|)
 block|{
 name|Header
 name|header
 init|=
-name|head
+name|method
 operator|.
 name|getResponseHeader
 argument_list|(
@@ -2158,8 +2195,8 @@ block|{
 name|long
 name|getResponseContentLength
 parameter_list|(
-name|HeadMethod
-name|head
+name|HttpMethodBase
+name|method
 parameter_list|)
 function_decl|;
 name|int
