@@ -73,6 +73,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Map
 import|;
 end_import
@@ -419,6 +429,61 @@ argument_list|,
 name|l
 argument_list|)
 expr_stmt|;
+block|}
+specifier|public
+name|void
+name|setRequestMethod
+parameter_list|(
+name|int
+name|requestMethod
+parameter_list|)
+block|{
+name|defaultHandler
+operator|.
+name|setRequestMethod
+argument_list|(
+name|requestMethod
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Iterator
+name|it
+init|=
+name|handlers
+operator|.
+name|values
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|it
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|URLHandler
+name|handler
+init|=
+operator|(
+name|URLHandler
+operator|)
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|handler
+operator|.
+name|setRequestMethod
+argument_list|(
+name|requestMethod
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 specifier|public
 name|void
