@@ -75,10 +75,15 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 	Patrick Woodworth
 	Jaroslaw Wypychowski
 	
-   trunk version
+   trunk
 =====================================
 - DOCUMENTATION: Filesystem resolver: talks about "patterns" but does not mention these must become absolute file paths (IVY-910)
 
+- IMPROVEMENT: Error messages on use of relative paths can be cyrptic (IVY-909)
+
+- FIX: Cannot configure items with java.io.File attributes (IVY-905)
+- FIX: Environment properties in ivy settings are no longer resolved (IVY-907)
+- FIX: Resolve failed on certain proxy environment (IVY-911)
 
    2.0.0-rc1
 =====================================
